# agent-portal

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/portal-adapters/: Cargo.toml
crates/portal-adapters/examples/: board_smoke.rs  brief_smoke.rs  migrate_any.rs  migrate_smoke.rs  migrate_x2c.rs  read_smoke.rs
crates/portal-adapters/fixtures/claude-code/v2.1/store/P--demo-app/: 11111111-1111-1111-1111-111111111111.jsonl
crates/portal-adapters/fixtures/codex/v0.143/: session_index.jsonl
crates/portal-adapters/fixtures/codex/v0.143/store/2026/07/01/: rollout-2026-07-01T10-00-00-019f0000-0000-7000-8000-000000000001.jsonl
crates/portal-adapters/fixtures/factory-droid/v0.162/store/-P-demo-app/: aaaaaaaa-aaaa-4aaa-8aaa-aaaaaaaaaaaa.jsonl  aaaaaaaa-aaaa-4aaa-8aaa-aaaaaaaaaaaa.settings.json
crates/portal-adapters/fixtures/grok/v0.2.93/store/P%3A%5Cdemo%5Capp/019f0000-0000-7000-8000-000000000001/: chat_history.jsonl  summary.json
crates/portal-adapters/fixtures/junie/v26.7/store/: index.jsonl
crates/portal-adapters/fixtures/junie/v26.7/store/session-260702-100000-demo/: events.jsonl  state.json
crates/portal-adapters/fixtures/pi/v0.80/store/--P--demo-app--/: 2026-07-02T10-00-00-000Z_bbbbbbbb-bbbb-4bbb-8bbb-bbbbbbbbbbbb.jsonl
crates/portal-adapters/src/: lib.rs
crates/portal-adapters/src/antigravity/: mod.rs  proto.rs  read.rs  summaries.rs
crates/portal-adapters/src/claude_code/: mod.rs  read.rs  write.rs
crates/portal-adapters/src/claude_cowork/: cache.rs  mod.rs  read.rs
crates/portal-adapters/src/codex/: mod.rs  read.rs  write.rs
crates/portal-adapters/src/copilot/: mod.rs  read.rs
crates/portal-adapters/src/factory_droid/: mod.rs  read.rs
crates/portal-adapters/src/grok/: mod.rs  read.rs  write.rs
crates/portal-adapters/src/junie/: mod.rs  read.rs
crates/portal-adapters/src/opencode/: mod.rs  read.rs
crates/portal-adapters/src/pi/: mod.rs  read.rs
crates/portal-adapters/tests/: factory_droid_read.rs  grok_read.rs  junie_read.rs  migrate_roundtrip.rs  opencode_read.rs  pi_read.rs  read_ir.rs
crates/portal-core/: Cargo.toml
crates/portal-core/src/: adapter.rs  dto.rs  error.rs  ir.rs  lib.rs  registry.rs  settings.rs
crates/portal-core/src/index/: mod.rs
crates/portal-core/src/launch/: mod.rs
crates/portal-core/src/migration/: brief.rs  compact.rs  engine.rs  ledger.rs  mod.rs  ollama.rs  types.rs  verify.rs
crates/portal-core/src/util/: jsonl.rs  mod.rs  paths.rs
docs/: grok-build-adapter-research.md  macos-signing.md
scripts/: check-command-parity.mjs  install.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  naming.rs  state.rs  tray.rs
ui/: README.md  angular.json  package.json  pnpm-lock.yaml
ui/src/: styles.scss
ui/src/app/: app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
ui/src/app/core/ipc/: commands.ts  tauri.service.ts
ui/src/app/core/state/: board.store.ts
ui/src/app/features/activity/: activity-page.html  activity-page.scss  activity-page.ts
ui/src/app/features/board/: board-page.html  board-page.scss  board-page.ts
ui/src/app/features/migration/: migration-wizard.html  migration-wizard.scss  migration-wizard.ts
ui/src/app/features/peek/: peek-panel.html  peek-panel.scss  peek-panel.ts
(+12 files in other folders)
