[package]
name = "portal-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

# Distinct lib name avoids the Windows .pdb filename collision with the bin target.
[lib]
name = "portal_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { workspace = true }
serde_json = { workspace = true }
portal-core = { path = "../crates/portal-core" }
portal-adapters = { path = "../crates/portal-adapters" }
