[package]
name = "portal-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
portal-core = { path = "../portal-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
